--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ def mvnHome=Maven
         stage('Build') {
             steps {
             
-                sh mvnHome/bin/mvn clean install
+                sh 'mvnHome/bin/mvn clean install'
             }
         }
     }
