--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,5 @@
 pipeline {
     agent any
-tools{
-maven 'Maven'
-
-}
-
   stages{
    
     stage('CheckOutCode'){
@@ -15,8 +10,9 @@ maven 'Maven'
   }
         stage('Build') {
             steps {
-            
-                sh 'mvn clean install'
+               agent { docker 'maven:3-alpine' } 
+            	  steps {
+                   sh 'mvn clean install'
             }
         }
     }
