--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,8 @@ pipeline {
 	}
   }
         stage('Build') {
-               agent { docker 'maven:3-alpine' } 
+               agent { docker 
+	       image 'maven:3-alpine' } 
             	  steps {
                    sh 'mvn clean install'
 		   }
