--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    tools{
+    Maven
+    }
   stages{
    
     stage('CheckOutCode'){
@@ -8,9 +11,7 @@ pipeline {
 	
 	}
   }
-        stage('Build') {
-               agent { docker 
-	       image 'maven:3-alpine' } 
+        stage('Build') { 
             	  steps {
                    sh 'mvn clean install'
 		   }
